oreilly/oreilly/kubernetes-manifest-files/python-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: registry.hub.docker.com/caedus41/oreilly-cloud-engineer-python-api
        ports:
        - containerPort: 5000
