oreilly/oreilly/kubernetes-manifest-files/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: postgres-service
    app: python-app
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    name: postgres-pod
    app: python-app
