oreilly/oreilly/kubernetes-manifest-files/python-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: python-app
