oreilly/oreilly/kubernetes-manifest-files/python-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
spec:
  defaultBackend:
    service:
      name: python-api-service
      port:
        number: 5000
